deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
        name: jai-test

spec:
    replicas: 1
    selector:
            matchLabels:
                    app: tomcat
    template:
            metadata:
                    labels:
                            app: tomcat
            spec:
                    containers:
                            - name: tomcat
                              image: tomcat:jdk8-openjdk-slim
                              ports:
                                      - containerPort: 8080
