nginx_test_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-world-test
  name: hello-world-test
  selfLink: /api/v1/namespaces/default/services/hello-world-test
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world-test
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
