service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jai-test
  labels:
    app: tomcat
spec:
  selector:
    app: tomcat
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: <YOUR STATIC IP ADDRESS HERE>
