ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: tomcat-ingress
        annotations:
                nginx.ingress.kubernetes.io/rewrite-target: /
spec:
        rules:
                - http:
                        paths:
                                - path: /
                                  backend:
                                          serviceName: jai-test
                                          servicePort: 8080
